Added unstaged files

--- a/composites/casebox-web/src/main/resources/META-INF/velocity/admin/user.vm
+++ b/composites/casebox-web/src/main/resources/META-INF/velocity/admin/user.vm
@@ -1,4 +1,5 @@
 <form action="#springUrl("/web/admin/user/create")" method="POST">
+    <input name="_csrf" type="hidden" value="${_csrf.token}" />
 <div>
 	<div style="float:right;">
 		<input type="submit" name="button.save" value="#springMessage('button.save')"/>
